scripts/working_dir/errlog
  File "test2.py", line 1
    a sl;fjkdslafj
       ^
SyntaxError: invalid syntax
